<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_theme_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="16dp"
    android:background="?attr/myCardBackgroundColor"
    app:cardBackgroundColor="?attr/myCardBackgroundColor"
    app:cardCornerRadius="16dp"
    app:cardElevation="?attr/myCardElevation"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:text="@string/theme_settings_title"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:text="@string/theme_settings_dark_mode"
            android:textColor="?attr/myTextColor"
            android:textSize="16sp"
            android:clickable="false"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/themeCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/greenThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/circle_green"
                android:contentDescription="@string/theme_settings_green_cd"
                android:foreground="?attr/actionBarItemBackground"
                android:padding="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/blueThemeBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/blueThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_blue"
                android:contentDescription="@string/theme_settings_blue_cd"
                android:foreground="?attr/actionBarItemBackground"
                android:padding="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/purpleThemeBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/greenThemeBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/purpleThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_purple"
                android:contentDescription="@string/theme_settings_purple_cd"
                android:foreground="?attr/actionBarItemBackground"
                android:padding="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/redThemeBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/blueThemeBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/redThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_red"
                android:contentDescription="@string/theme_settings_red_cd"
                android:foreground="?attr/actionBarItemBackground"
                android:padding="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/orangeThemeBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/purpleThemeBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/orangeThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circle_orange"
                android:contentDescription="@string/theme_settings_orange_cd"
                android:foreground="?attr/actionBarItemBackground"
                android:padding="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/redThemeBtn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>